<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExemploWebView</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Informations from WebView..</string>
    <string name="webview_test">WebView Test</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="name">Name: </string>
    <string name="password">Password: </string>
    <string name="email">Email: </string>
    <string name="back_to_form">Back to Form</string>

</resources>
