<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="5dp"
    android:paddingRight="5dp"
    android:paddingTop="15dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:id="@+id/textView" />


    <TableLayout
        android:id="@+id/form_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1"
        android:background="#ff78a7de">

        <TableRow>
            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/name" />

            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/txtName" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/email" />

            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/txtEmail" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/password" />

            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/txtPassword" />

        </TableRow>


    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_form"
        android:onClick="backToMain"/>



</LinearLayout>
